# voxel-game

./: .gitignore  CMakeLists.txt  run.sh
.cache/clangd/index/: glad.c.60403CDB701710C2.idx  glad.h.83AFCEF0866DC915.idx  khrplatform.h.0ADFC335F9397B4E.idx  main.cpp.45080E9FD791D6E4.idx
include/glad/: glad.h
include/voxel_game/: shader.h
shaders/: basic.fs  basic.vs
src/: glad.c  main.cpp  shader.cpp
